--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <!-- Page Heading -->
       <h1 class="my-4">Page Heading
-        <small>Secondary Text</small>
+        <small>Secondary TEXTHERE</small>
       </h1>
 
       <div id="projects" class="background-alt">
