--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
     <div id="projects" class="background-alt">
-      <h2 class="heading">Projects</h2>
+      <h2 class="heading">prodigy</h2>
       <div class="container">
         <div class="row">
           <div class="project shadow-large">
