--- a/index.html
+++ b/index.html
@@ -1,217 +1,283 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 
-  <head>
-
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Artur Bassov Portfolio</title>
-      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-      <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Portfolio</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+</head>
 
-    <!-- Custom styles for this template -->
-    <link href="css/1-col-portfolio.css" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-
-    <div id="projects" class="background-alt">
-      <h2 class="heading">prodigy</h2>
-      <div class="container">
-        <div class="row">
-          <div class="project shadow-large">
-            <div class="project-image">
-              <img src="images/project.jpg" />
-            </div>
-            <!-- End .project-image -->
-            <div class="project-info">
-              <h3>Project Name Here</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-              </p>
-              <a href="#">View Project</a>
-            </div>
-            <!-- End .project-info -->
-          </div>
-          <!-- End .project -->
-
-          <div class="project shadow-large">
-            <div class="project-image">
-              <img src="images/project.jpg" />
-            </div>
-            <!-- End .project-image -->
-            <div class="project-info">
-              <h3>Project Name Here</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-              </p>
-              <a href="#">View Project</a>
-            </div>
-            <!-- End .project-info -->
-          </div>
-          <!-- End .project -->
-        </div>
-      </div>
+<body>
+<div id="mobile-menu-open" class="shadow-large">
+    <i class="fa fa-bars" aria-hidden="true"></i>
+</div>
+<!-- End #mobile-menu-toggle -->
+<header>
+    <div id="mobile-menu-close">
+        <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
     </div>
-    <!-- End #projects -->
+    <ul id="menu" class="shadow">
+        <li>
+            <a href="#about">About</a>
+        </li>
+        <li>
+            <a href="#experience">Experience</a>
+        </li>
+        <li>
+            <a href="#education">Education</a>
+        </li>
+        <li>
+            <a href="#projects">Projects</a>
+        </li>
+        <li>
+            <a href="#skills">Skills</a>
+        </li>
+        <li>
+            <a href="#contact">Contact</a>
+        </li>
+    </ul>
+</header>
+<!-- End header -->
 
+<div id="lead">
+    <div id="lead-content">
+        <h1>Ryan Fitzgerald</h1>
+        <h2>Software Engineer</h2>
+        <a href="#" class="btn-rounded-white">Download Resume</a>
+    </div>
+    <!-- End #lead-content -->
 
-    <!--&lt;!&ndash; Page Content &ndash;&gt;-->
-    <!--<div class="container">-->
+    <div id="lead-overlay"></div>
 
-      <!--&lt;!&ndash; Page Heading &ndash;&gt;-->
-      <!--<h1 class="my-4">Page Heading-->
-        <!--<small>Secondary TEXTHERE</small>-->
-      <!--</h1>-->
+    <div id="lead-down">
+            <span>
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+    </div>
+    <!-- End #lead-down -->
+</div>
+<!-- End #lead -->
 
+<div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h2 class="heading">About Me</h2>
+            </div>
+            <div class="col-md-8">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
+                    eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
+                    ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End #about -->
 
+<div id="experience" class="background-alt">
+    <h2 class="heading">Experience</h2>
+    <div id="experience-timeline">
+        <div data-date="September 2015 – September 2016">
+            <h3>Employer Name</h3>
+            <h4>Job Title</h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+            </p>
+        </div>
 
+        <div data-date="September 2015 – September 2016">
+            <h3>Employer Name</h3>
+            <h4>Job Title</h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+            </p>
+        </div>
 
-      <!--&lt;!&ndash; Project One &ndash;&gt;-->
-      <!--<div class="row">-->
-        <!--<div class="col-md-7">-->
-          <!--<a href="#">-->
-            <!--<img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">-->
-          <!--</a>-->
-        <!--</div>-->
-        <!--<div class="col-md-5">-->
-          <!--<h3>Project One</h3>-->
-          <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>-->
-          <!--<a class="btn btn-primary" href="#">Source</a>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--&lt;!&ndash; /.row &ndash;&gt;-->
+        <div data-date="September 2015 – September 2016">
+            <h3>Employer Name</h3>
+            <h4>Job Title</h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+            </p>
+        </div>
+    </div>
+</div>
+<!-- End #experience -->
 
-      <!--<hr>-->
+<div id="education">
+    <h2 class="heading">Education</h2>
+    <div class="education-block">
+        <h3>University of Ottawa</h3>
+        <span class="education-date">Sept 2016 - Sept 2017</span>
+        <h4>Bachelor of Science in Computer Science</h4>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+        </p>
+    </div>
+    <!-- End .education-block -->
 
-      <!--&lt;!&ndash; Project Two &ndash;&gt;-->
-      <!--<div class="row">-->
-        <!--<div class="col-md-7">-->
-          <!--<a href="#">-->
-            <!--<img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">-->
-          <!--</a>-->
-        <!--</div>-->
-        <!--<div class="col-md-5">-->
-          <!--<h3>Project Two</h3>-->
-          <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>-->
-          <!--<a class="btn btn-primary" href="#">View Project</a>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--&lt;!&ndash; /.row &ndash;&gt;-->
+    <div class="education-block">
+        <h3>University of Ottawa</h3>
+        <span class="education-date">Sept 2016 - Sept 2017</span>
+        <h4>Bachelor of Science in Computer Science</h4>
+        <ul>
+            <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </li>
+        </ul>
+    </div>
+    <!-- End .education-block -->
+</div>
+<!-- End #education -->
 
-      <!--<hr>-->
+<div id="projects" class="background-alt">
+    <h2 class="heading">Projects</h2>
+    <div class="container">
+        <div class="row">
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/project.jpg" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>Project Name Here</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    </p>
+                    <a href="#">View Project</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
 
-      <!--&lt;!&ndash; Project Three &ndash;&gt;-->
-      <!--<div class="row">-->
-        <!--<div class="col-md-7">-->
-          <!--<a href="#">-->
-            <!--<img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">-->
-          <!--</a>-->
-        <!--</div>-->
-        <!--<div class="col-md-5">-->
-          <!--<h3>Project Three</h3>-->
-          <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>-->
-          <!--<a class="btn btn-primary" href="#">View Project</a>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--&lt;!&ndash; /.row &ndash;&gt;-->
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/project.jpg" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>Project Name Here</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    </p>
+                    <a href="#">View Project</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
+        </div>
+    </div>
+</div>
+<!-- End #projects -->
 
-      <!--<hr>-->
+<div id="skills">
+    <h2 class="heading">Skills</h2>
+    <ul>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>Ruby</li>
+        <li>Go</li>
+        <li>Node.js</li>
+        <li>AngularJs</li>
+        <li>React</li>
+        <li>Elixir</li>
+        <li>Java</li>
+        <li>C</li>
+        <li>C#</li>
+        <li>C++</li>
+        <li>Ruby on Rails</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>Ruby</li>
+        <li>Go</li>
+        <li>Node.js</li>
+        <li>AngularJs</li>
+        <li>React</li>
+        <li>Elixir</li>
+        <li>Java</li>
+        <li>C</li>
+        <li>C#</li>
+        <li>C++</li>
+        <li>Ruby on Rails</li>
+    </ul>
+</div>
+<!-- End #skills -->
 
-      <!--&lt;!&ndash; Project Four &ndash;&gt;-->
-      <!--<div class="row">-->
+<div id="contact">
+    <h2>Get in Touch</h2>
+    <div id="contact-form">
+        <form method="POST" action="https://formspree.io/email@email.com">
+            <input type="hidden" name="_subject" value="Contact request from personal website" />
+            <input type="email" name="_replyto" placeholder="Your email" required>
+            <textarea name="message" placeholder="Your message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </div>
+    <!-- End #contact-form -->
+</div>
+<!-- End #contact -->
 
-        <!--<div class="col-md-7">-->
-          <!--<a href="#">-->
-            <!--<img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">-->
-          <!--</a>-->
-        <!--</div>-->
-        <!--<div class="col-md-5">-->
-          <!--<h3>Project Four</h3>-->
-          <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>-->
-          <!--<a class="btn btn-primary" href="#">View Project</a>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--&lt;!&ndash; /.row &ndash;&gt;-->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 copyright">
+                <p>
+                    Copyright &copy; 2017 YOUR NAME
+                </p>
+            </div>
+            <div class="col-sm-2 top">
+                    <span id="to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </span>
+            </div>
+            <div class="col-sm-5 social">
+                <ul>
+                    <li>
+                        <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- End footer -->
 
-      <!--<hr>-->
-
-      <!--&lt;!&ndash; Pagination &ndash;&gt;-->
-      <!--<ul class="pagination justify-content-center">-->
-        <!--<li class="page-item">-->
-          <!--<a class="page-link" href="#" aria-label="Previous">-->
-            <!--<span aria-hidden="true">&laquo;</span>-->
-            <!--<span class="sr-only">Previous</span>-->
-          <!--</a>-->
-        <!--</li>-->
-        <!--<li class="page-item">-->
-          <!--<a class="page-link" href="#">1</a>-->
-        <!--</li>-->
-        <!--<li class="page-item">-->
-          <!--<a class="page-link" href="#">2</a>-->
-        <!--</li>-->
-        <!--<li class="page-item">-->
-          <!--<a class="page-link" href="#">3</a>-->
-        <!--</li>-->
-        <!--<li class="page-item">-->
-          <!--<a class="page-link" href="#" aria-label="Next">-->
-            <!--<span aria-hidden="true">&raquo;</span>-->
-            <!--<span class="sr-only">Next</span>-->
-          <!--</a>-->
-        <!--</li>-->
-      <!--</ul>-->
-
-    <!--</div>-->
-    <!--&lt;!&ndash; /.container &ndash;&gt;-->
-
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="js/scripts.min.js"></script>
-
-  </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/scripts.min.js"></script>
+</body>
 
 </html>
+
+
+<!-- Bootstrap core JavaScript -->
+<!--<script src="vendor/jquery/jquery.min.js"></script>-->
+<!--<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+
+<!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
