--- a/index.html
+++ b/index.html
@@ -10,59 +10,61 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-<div id="mobile-menu-open" class="shadow-large">
-    <i class="fa fa-bars" aria-hidden="true"></i>
-</div>
+<!--<div id="mobile-menu-open" class="shadow-large">-->
+    <!--<i class="fa fa-bars" aria-hidden="true"></i>-->
+<!--</div>-->
 <!-- End #mobile-menu-toggle -->
-<header>
-    <div id="mobile-menu-close">
-        <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-    </div>
-    <ul id="menu" class="shadow">
-        <li>
-            <a href="#about">About</a>
-        </li>
-        <li>
-            <a href="#experience">Experience</a>
-        </li>
-        <li>
-            <a href="#education">Education</a>
-        </li>
-        <li>
-            <a href="#projects">Projects</a>
-        </li>
-        <li>
-            <a href="#skills">Skills</a>
-        </li>
-        <li>
-            <a href="#contact">Contact</a>
-        </li>
-    </ul>
-</header>
+<!--<header>-->
+    <!--<div id="mobile-menu-close">-->
+        <!--<span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>-->
+    <!--</div>-->
+    <!--<ul id="menu" class="shadow">-->
+        <!--<li>-->
+            <!--<a href="#about">About</a>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<a href="#experience">Experience</a>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<a href="#education">Education</a>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<a href="#projects">Projects</a>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<a href="#skills">Skills</a>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<a href="#contact">Contact</a>-->
+        <!--</li>-->
+    <!--</ul>-->
+<!--</header>-->
 <!-- End header -->
 
-<div id="lead">
-    <div id="lead-content">
-        <h1>Ryan Fitzgerald</h1>
-        <h2>Software Engineer</h2>
-        <a href="#" class="btn-rounded-white">Download Resume</a>
-    </div>
-    <!-- End #lead-content -->
+<!--<div id="lead">-->
+    <!--<div id="lead-content">-->
+        <!--<h1>Ryan Fitzgerald</h1>-->
+        <!--<h2>Software Engineer</h2>-->
+        <!--<a href="#" class="btn-rounded-white">Download Resume</a>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; End #lead-content &ndash;&gt;-->
 
-    <div id="lead-overlay"></div>
+    <!--<div id="lead-overlay"></div>-->
 
-    <div id="lead-down">
-            <span>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-            </span>
-    </div>
-    <!-- End #lead-down -->
-</div>
+    <!--<div id="lead-down">-->
+            <!--<span>-->
+                <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
+            <!--</span>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; End #lead-down &ndash;&gt;-->
+<!--</div>-->
 <!-- End #lead -->
 
 <div id="about">
@@ -83,66 +85,66 @@
 </div>
 <!-- End #about -->
 
-<div id="experience" class="background-alt">
-    <h2 class="heading">Experience</h2>
-    <div id="experience-timeline">
-        <div data-date="September 2015 – September 2016">
-            <h3>Employer Name</h3>
-            <h4>Job Title</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
+<!--<div id="experience" class="background-alt">-->
+    <!--<h2 class="heading">Experience</h2>-->
+    <!--<div id="experience-timeline">-->
+        <!--<div data-date="September 2015 – September 2016">-->
+            <!--<h3>Employer Name</h3>-->
+            <!--<h4>Job Title</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
+            <!--</p>-->
+        <!--</div>-->
 
-        <div data-date="September 2015 – September 2016">
-            <h3>Employer Name</h3>
-            <h4>Job Title</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
+        <!--<div data-date="September 2015 – September 2016">-->
+            <!--<h3>Employer Name</h3>-->
+            <!--<h4>Job Title</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
+            <!--</p>-->
+        <!--</div>-->
 
-        <div data-date="September 2015 – September 2016">
-            <h3>Employer Name</h3>
-            <h4>Job Title</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
-    </div>
-</div>
+        <!--<div data-date="September 2015 – September 2016">-->
+            <!--<h3>Employer Name</h3>-->
+            <!--<h4>Job Title</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
+            <!--</p>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 <!-- End #experience -->
 
-<div id="education">
-    <h2 class="heading">Education</h2>
-    <div class="education-block">
-        <h3>University of Ottawa</h3>
-        <span class="education-date">Sept 2016 - Sept 2017</span>
-        <h4>Bachelor of Science in Computer Science</h4>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-        </p>
-    </div>
-    <!-- End .education-block -->
+<!--<div id="education">-->
+    <!--<h2 class="heading">Education</h2>-->
+    <!--<div class="education-block">-->
+        <!--<h3>University of Ottawa</h3>-->
+        <!--<span class="education-date">Sept 2016 - Sept 2017</span>-->
+        <!--<h4>Bachelor of Science in Computer Science</h4>-->
+        <!--<p>-->
+            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
+        <!--</p>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; End .education-block &ndash;&gt;-->
 
-    <div class="education-block">
-        <h3>University of Ottawa</h3>
-        <span class="education-date">Sept 2016 - Sept 2017</span>
-        <h4>Bachelor of Science in Computer Science</h4>
-        <ul>
-            <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </li>
-            <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </li>
-            <li>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </li>
-        </ul>
-    </div>
-    <!-- End .education-block -->
-</div>
+    <!--<div class="education-block">-->
+        <!--<h3>University of Ottawa</h3>-->
+        <!--<span class="education-date">Sept 2016 - Sept 2017</span>-->
+        <!--<h4>Bachelor of Science in Computer Science</h4>-->
+        <!--<ul>-->
+            <!--<li>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; End .education-block &ndash;&gt;-->
+<!--</div>-->
 <!-- End #education -->
 
 <div id="projects" class="background-alt">
@@ -185,88 +187,88 @@
 </div>
 <!-- End #projects -->
 
-<div id="skills">
-    <h2 class="heading">Skills</h2>
-    <ul>
-        <li>JavaScript</li>
-        <li>Python</li>
-        <li>Ruby</li>
-        <li>Go</li>
-        <li>Node.js</li>
-        <li>AngularJs</li>
-        <li>React</li>
-        <li>Elixir</li>
-        <li>Java</li>
-        <li>C</li>
-        <li>C#</li>
-        <li>C++</li>
-        <li>Ruby on Rails</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-        <li>Ruby</li>
-        <li>Go</li>
-        <li>Node.js</li>
-        <li>AngularJs</li>
-        <li>React</li>
-        <li>Elixir</li>
-        <li>Java</li>
-        <li>C</li>
-        <li>C#</li>
-        <li>C++</li>
-        <li>Ruby on Rails</li>
-    </ul>
-</div>
+<!--<div id="skills">-->
+    <!--<h2 class="heading">Skills</h2>-->
+    <!--<ul>-->
+        <!--<li>JavaScript</li>-->
+        <!--<li>Python</li>-->
+        <!--<li>Ruby</li>-->
+        <!--<li>Go</li>-->
+        <!--<li>Node.js</li>-->
+        <!--<li>AngularJs</li>-->
+        <!--<li>React</li>-->
+        <!--<li>Elixir</li>-->
+        <!--<li>Java</li>-->
+        <!--<li>C</li>-->
+        <!--<li>C#</li>-->
+        <!--<li>C++</li>-->
+        <!--<li>Ruby on Rails</li>-->
+        <!--<li>JavaScript</li>-->
+        <!--<li>Python</li>-->
+        <!--<li>Ruby</li>-->
+        <!--<li>Go</li>-->
+        <!--<li>Node.js</li>-->
+        <!--<li>AngularJs</li>-->
+        <!--<li>React</li>-->
+        <!--<li>Elixir</li>-->
+        <!--<li>Java</li>-->
+        <!--<li>C</li>-->
+        <!--<li>C#</li>-->
+        <!--<li>C++</li>-->
+        <!--<li>Ruby on Rails</li>-->
+    <!--</ul>-->
+<!--</div>-->
 <!-- End #skills -->
 
-<div id="contact">
-    <h2>Get in Touch</h2>
-    <div id="contact-form">
-        <form method="POST" action="https://formspree.io/email@email.com">
-            <input type="hidden" name="_subject" value="Contact request from personal website" />
-            <input type="email" name="_replyto" placeholder="Your email" required>
-            <textarea name="message" placeholder="Your message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </div>
-    <!-- End #contact-form -->
-</div>
+<!--<div id="contact">-->
+    <!--<h2>Get in Touch</h2>-->
+    <!--<div id="contact-form">-->
+        <!--<form method="POST" action="https://formspree.io/email@email.com">-->
+            <!--<input type="hidden" name="_subject" value="Contact request from personal website" />-->
+            <!--<input type="email" name="_replyto" placeholder="Your email" required>-->
+            <!--<textarea name="message" placeholder="Your message" required></textarea>-->
+            <!--<button type="submit">Send</button>-->
+        <!--</form>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; End #contact-form &ndash;&gt;-->
+<!--</div>-->
 <!-- End #contact -->
 
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-5 copyright">
-                <p>
-                    Copyright &copy; 2017 YOUR NAME
-                </p>
-            </div>
-            <div class="col-sm-2 top">
-                    <span id="to-top">
-                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                    </span>
-            </div>
-            <div class="col-sm-5 social">
-                <ul>
-                    <li>
-                        <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+<!--<footer>-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col-sm-5 copyright">-->
+                <!--<p>-->
+                    <!--Copyright &copy; 2017 YOUR NAME-->
+                <!--</p>-->
+            <!--</div>-->
+            <!--<div class="col-sm-2 top">-->
+                    <!--<span id="to-top">-->
+                        <!--<i class="fa fa-chevron-up" aria-hidden="true"></i>-->
+                    <!--</span>-->
+            <!--</div>-->
+            <!--<div class="col-sm-5 social">-->
+                <!--<ul>-->
+                    <!--<li>-->
+                        <!--<a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</footer>-->
 <!-- End footer -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -276,8 +278,5 @@
 </html>
 
 
-<!-- Bootstrap core JavaScript -->
-<!--<script src="vendor/jquery/jquery.min.js"></script>-->
-<!--<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
 
 <!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
