--- a/index.html
+++ b/index.html
@@ -5,79 +5,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Artur Bassov Portfolio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-<!--<div id="mobile-menu-open" class="shadow-large">-->
-    <!--<i class="fa fa-bars" aria-hidden="true"></i>-->
-<!--</div>-->
-<!-- End #mobile-menu-toggle -->
-<!--<header>-->
-    <!--<div id="mobile-menu-close">-->
-        <!--<span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>-->
-    <!--</div>-->
-    <!--<ul id="menu" class="shadow">-->
-        <!--<li>-->
-            <!--<a href="#about">About</a>-->
-        <!--</li>-->
-        <!--<li>-->
-            <!--<a href="#experience">Experience</a>-->
-        <!--</li>-->
-        <!--<li>-->
-            <!--<a href="#education">Education</a>-->
-        <!--</li>-->
-        <!--<li>-->
-            <!--<a href="#projects">Projects</a>-->
-        <!--</li>-->
-        <!--<li>-->
-            <!--<a href="#skills">Skills</a>-->
-        <!--</li>-->
-        <!--<li>-->
-            <!--<a href="#contact">Contact</a>-->
-        <!--</li>-->
-    <!--</ul>-->
-<!--</header>-->
-<!-- End header -->
-
-<!--<div id="lead">-->
-    <!--<div id="lead-content">-->
-        <!--<h1>Ryan Fitzgerald</h1>-->
-        <!--<h2>Software Engineer</h2>-->
-        <!--<a href="#" class="btn-rounded-white">Download Resume</a>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; End #lead-content &ndash;&gt;-->
-
-    <!--<div id="lead-overlay"></div>-->
-
-    <!--<div id="lead-down">-->
-            <!--<span>-->
-                <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
-            <!--</span>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; End #lead-down &ndash;&gt;-->
-<!--</div>-->
-<!-- End #lead -->
 
 <div id="about">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2 class="heading">About Me</h2>
+                <h2 class="heading">Intro</h2>
             </div>
             <div class="col-md-8">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                    eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                    ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                    This webpage is accompanied by my CV. Below are listed projects that was created by me (there are 2 team projects currently running). Most of them are created for educational purposes.
                 </p>
             </div>
         </div>
@@ -85,83 +32,22 @@
 </div>
 <!-- End #about -->
 
-<!--<div id="experience" class="background-alt">-->
-    <!--<h2 class="heading">Experience</h2>-->
-    <!--<div id="experience-timeline">-->
-        <!--<div data-date="September 2015 – September 2016">-->
-            <!--<h3>Employer Name</h3>-->
-            <!--<h4>Job Title</h4>-->
-            <!--<p>-->
-                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-            <!--</p>-->
-        <!--</div>-->
-
-        <!--<div data-date="September 2015 – September 2016">-->
-            <!--<h3>Employer Name</h3>-->
-            <!--<h4>Job Title</h4>-->
-            <!--<p>-->
-                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-            <!--</p>-->
-        <!--</div>-->
-
-        <!--<div data-date="September 2015 – September 2016">-->
-            <!--<h3>Employer Name</h3>-->
-            <!--<h4>Job Title</h4>-->
-            <!--<p>-->
-                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-            <!--</p>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!-- End #experience -->
-
-<!--<div id="education">-->
-    <!--<h2 class="heading">Education</h2>-->
-    <!--<div class="education-block">-->
-        <!--<h3>University of Ottawa</h3>-->
-        <!--<span class="education-date">Sept 2016 - Sept 2017</span>-->
-        <!--<h4>Bachelor of Science in Computer Science</h4>-->
-        <!--<p>-->
-            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.-->
-        <!--</p>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; End .education-block &ndash;&gt;-->
-
-    <!--<div class="education-block">-->
-        <!--<h3>University of Ottawa</h3>-->
-        <!--<span class="education-date">Sept 2016 - Sept 2017</span>-->
-        <!--<h4>Bachelor of Science in Computer Science</h4>-->
-        <!--<ul>-->
-            <!--<li>-->
-                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
-            <!--</li>-->
-        <!--</ul>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; End .education-block &ndash;&gt;-->
-<!--</div>-->
-<!-- End #education -->
-
 <div id="projects" class="background-alt">
     <h2 class="heading">Projects</h2>
     <div class="container">
         <div class="row">
             <div class="project shadow-large">
-                <div class="project-image">
-                    <img src="images/project.jpg" />
+                <div  class="project-image">
+                    <img src="images/JavaMultithreadedCity.jpg" />
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
-                    <h3>Project Name Here</h3>
+                    <h3>Java multithreading project</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        This is the simulation [similar to which we are living(just kidding)] of city roads where cars are driven and emit air pollution. Air pollution is calculated and this data is processed accordingly.
+                        City is a graph implementation, where crossroads are nodes and roads are edges. Every car is a Thread. <br><b>Technology:</b> Multithreading in Java
                     </p>
-                    <a href="#">View Project</a>
+                    <a href="https://github.com/artiku/EnvironmentalCityControl">Source</a>
                 </div>
                 <!-- End .project-info -->
             </div>
@@ -169,15 +55,114 @@
 
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img src="images/project.jpg" />
+                    <img src="images/justiceofminos.png" />
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
-                    <h3>Project Name Here</h3>
+                    <h3>Justice of Minos</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        First game project written in Java using JavaFX. Top-down view maze runner. Find door, find key for that door, escape traps, escape the maze. Art is fully handmade. <br><b>Technology:</b> JavaFX (+SceneBuilder)
                     </p>
-                    <a href="#">View Project</a>
+                    <a href="https://github.com/artiku/JusticeOfMinos">Source</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
+
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/BWNBiggerKnight1.png" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>Child Without a Name</h3>
+                    <p>
+                        Currently developing nameless game project. This it client-server architecture multiplayer turn-based game. In a team of two tasks are divided equally, but my special parts are server-side and database.
+                        <br><b>Technology:</b> Java, LibGDX, Kryonet, Hibernate
+                    </p>
+                    <a href="https://github.com/disciplinity/yellow-quackling-productions">Source</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
+
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/WFI.png" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>OpenWeather API Application</h3>
+                    <p>
+                        Application was created to use TTD principle. It uses OpenWeatherAPI to fetch weather information through command line writing city name.<br><b>Technology:</b> OpenWeatherAPI, Java, JUnit, Mockito
+                    </p>
+                    <a href="https://github.com/artiku/WeatherApiProjectTestAutomation">Source</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
+
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/Greedit.PNG" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>Greedit</h3>
+                    <p>
+                        Typical forum. With registration, authorization, post reading and for authorized users post writing and rate system.<br><b>Technology:</b> Javascript, PHP, SQL
+                    </p>
+                    <a href="https://github.com/artiku/Greedit">Source</a> <br>
+                    <a href="http://dijkstra.cs.ttu.ee/~artbas/prax4/">Why not to look at it yourself?</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
+
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/Minesweeper.png" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>Minesweeper</h3>
+                    <p>
+                        Minesweeper with overpowered savings and high score table. Also has a special anti-plagiarism gameplay rule not to uncover cells recursively.<br><b>Technology:</b> Javascript (JQuery)
+                    </p>
+                    <a href="https://github.com/artiku/Minesweeper">Source</a> <br>
+                    <a href="https://github.com/artiku/Minesweeper">Check it out</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
+
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/julia2.png" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>Fractals</h3>
+                    <p>
+                        Project where mathematical instance, programming power and creation of art connects. Python code draws fractals created with mathematical functions (bonus .gif). <br><b>Technology:</b> Pure Python, Python Imaging Library
+                    </p>
+                    <a href="https://github.com/artiku/Fractals">Source</a>
+                </div>
+                <!-- End .project-info -->
+            </div>
+            <!-- End .project -->
+
+            <div class="project shadow-large">
+                <div class="project-image">
+                    <img src="images/NordicWallet.png" />
+                </div>
+                <!-- End .project-image -->
+                <div class="project-info">
+                    <h3>Nordic Wallet</h3>
+                    <p>
+                        Team project for the real client. The idea of the Wallet is to connect different bank accounts within one app(iOS & Android).
+                    </p>
+                    <a class="" href="#">Private</a>
                 </div>
                 <!-- End .project-info -->
             </div>
@@ -187,96 +172,9 @@
 </div>
 <!-- End #projects -->
 
-<!--<div id="skills">-->
-    <!--<h2 class="heading">Skills</h2>-->
-    <!--<ul>-->
-        <!--<li>JavaScript</li>-->
-        <!--<li>Python</li>-->
-        <!--<li>Ruby</li>-->
-        <!--<li>Go</li>-->
-        <!--<li>Node.js</li>-->
-        <!--<li>AngularJs</li>-->
-        <!--<li>React</li>-->
-        <!--<li>Elixir</li>-->
-        <!--<li>Java</li>-->
-        <!--<li>C</li>-->
-        <!--<li>C#</li>-->
-        <!--<li>C++</li>-->
-        <!--<li>Ruby on Rails</li>-->
-        <!--<li>JavaScript</li>-->
-        <!--<li>Python</li>-->
-        <!--<li>Ruby</li>-->
-        <!--<li>Go</li>-->
-        <!--<li>Node.js</li>-->
-        <!--<li>AngularJs</li>-->
-        <!--<li>React</li>-->
-        <!--<li>Elixir</li>-->
-        <!--<li>Java</li>-->
-        <!--<li>C</li>-->
-        <!--<li>C#</li>-->
-        <!--<li>C++</li>-->
-        <!--<li>Ruby on Rails</li>-->
-    <!--</ul>-->
-<!--</div>-->
-<!-- End #skills -->
-
-<!--<div id="contact">-->
-    <!--<h2>Get in Touch</h2>-->
-    <!--<div id="contact-form">-->
-        <!--<form method="POST" action="https://formspree.io/email@email.com">-->
-            <!--<input type="hidden" name="_subject" value="Contact request from personal website" />-->
-            <!--<input type="email" name="_replyto" placeholder="Your email" required>-->
-            <!--<textarea name="message" placeholder="Your message" required></textarea>-->
-            <!--<button type="submit">Send</button>-->
-        <!--</form>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; End #contact-form &ndash;&gt;-->
-<!--</div>-->
-<!-- End #contact -->
-
-<!--<footer>-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-sm-5 copyright">-->
-                <!--<p>-->
-                    <!--Copyright &copy; 2017 YOUR NAME-->
-                <!--</p>-->
-            <!--</div>-->
-            <!--<div class="col-sm-2 top">-->
-                    <!--<span id="to-top">-->
-                        <!--<i class="fa fa-chevron-up" aria-hidden="true"></i>-->
-                    <!--</span>-->
-            <!--</div>-->
-            <!--<div class="col-sm-5 social">-->
-                <!--<ul>-->
-                    <!--<li>-->
-                        <!--<a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>-->
-                    <!--</li>-->
-                <!--</ul>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</footer>-->
-<!-- End footer -->
-
+<!-- Bootstrap core JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
-
-
-
-<!--<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
