--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
-                    <h3>Java multithreading project</h3>
+                    <h3>Environmental Pollution Control</h3>
                     <p>
                         This is the simulation [similar to which we are living(just kidding)] of city roads where cars are driven and emit air pollution. Air pollution is calculated and this data is processed accordingly.
                         City is a graph implementation, where crossroads are nodes and roads are edges. Every car is a Thread. <br><b>Technology:</b> Multithreading in Java
