CV open and download

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-md-8">
                 <p>
-                    This webpage is accompanied by my <a href="/images/curriculum_vitae.pdf" download>CV</a>>. Below are listed projects that was created by me (there are 2 team projects currently running). Most of them are created for educational purposes.
+                    This webpage is accompanied by my <a href="images/curriculum_vitae.pdf" target="_blank">CV</a> (<a href="images/curriculum_vitae.pdf" download>or download</a>). Below are listed projects that was created by me (there are 2 team projects currently running). Most of them are created for educational purposes.
                 </p>
             </div>
         </div>
