--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="project-info">
                     <h3>Child Without a Name</h3>
                     <p>
-                        Currently developing nameless game project. This it client-server architecture multiplayer turn-based game. In a team of two tasks are divided equally, but my special parts are server-side and database.
+                        Currently developing nameless game project. This is client-server architecture multiplayer turn-based game. In a team of two tasks are divided equally, but my special parts are server-side and database.
                         <br><b>Technology:</b> Java, LibGDX, Kryonet, Hibernate
                     </p>
                     <a href="https://github.com/disciplinity/yellow-quackling-productions">Source</a>
