--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-md-8">
                 <p>
-                    This webpage is accompanied by my <a href="images/curriculum_vitae.pdf" target="_blank">CV</a> (<a href="images/curriculum_vitae.pdf" download>or download</a>). Below are listed projects that was created by me (there are 2 team projects currently running). Most of them are created for educational purposes.
+                    This webpage is accompanied by my <a href="images/curriculum_vitae.pdf" target="_blank">CV</a> (<a href="images/curriculum_vitae.pdf" download>or download</a>). Below are listed projects that was created by me (there are 2 team projects). Most of them are created for educational purposes.
                 </p>
             </div>
         </div>
@@ -160,7 +160,7 @@
                 <div class="project-info">
                     <h3>Nordic Wallet</h3>
                     <p>
-                        Team project for the real client. The idea of the Wallet is to connect different bank accounts within one app(iOS & Android).
+                        Team project for the real client. The idea of the Wallet is to connect different bank accounts within one app(iOS & Android). It is done by now, but it is in a possesion of customer firm.
                     </p>
                     <a class="" href="#">Private</a>
                 </div>
